--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.sql.init.mode=always
+spring.jpa.open-in-view=false
+# ? jdbc-url ???????, ??? ?????? ????? ????????? ? ????
+spring.datasource.url=jdbc:h2:mem:filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
